--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Coach 2.0</title>
   </head>
   <body>
+    <div id="root"></div>
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+    <script  src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="/js/index.js"></script>
+    <script type="text/babel" src="/js/index.js"></script>
   </body>
 </html>
